--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Raleway:wght@700;800&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/surendhar.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Surendhar-portfolio</title>
